# dart_odbc_fast

./: .env.docker  .env.example  .gitignore  .pubignore  CHANGELOG.md  COMMIT_MESSAGE.txt  Dockerfile.test-runner  LICENSE  README.md  TELEMETRY_OPTIMIZATION_PLAN.md  analysis_options.yaml  analysis_report.txt  analysis_report_final.txt  benchmark_results.txt  dartdoc_options.yaml  docker-compose.yml  ffigen.yaml  pubspec.yaml
.cargo/: config.toml
.claude/: CLAUDE.md  settings.local.json
.github/: ISSUE_TEMPLATE.md
artifacts/: RELEASE_NOTES.md
benchmarks/: m1_baseline.dart  m2_performance.dart
doc/: API_SURFACE.md  API_SURFACE_v2.md  BUILD.md  CAPABILITIES_v3.md  CHANGELOG_TEMPLATE.md  DOWNLOAD_ANALYSIS.md  FUTURE_IMPLEMENTATIONS.md  MIGRATION_ASYNC.md  NATIVE_ASSETS.md  NEXT_STEPS.md  OBSERVABILITY.md  PERFORMANCE.md  PERFORMANCE_v2.md  README.md  RECOMENDACOES_NEXT_STEPS.md  RELEASE_AUTOMATION.md  RELEASE_PROCESS.md  TESTING.md  TEST_COVERAGE_v2.md  TEST_RESULTS.md  TROUBLESHOOTING.md  TYPE_MAPPING.md  VERSIONING_QUICK_REFERENCE.md  VERSIONING_STRATEGY.md  api_governance.md  m1_milestone.md  m2_milestone.md  m3_milestone.md  revisao_summary.md
docker/: README.md
example/: README.md  advanced_entities_demo.dart  async_demo.dart  async_service_locator_demo.dart  audit_example.dart  catalog_reflection_demo.dart  common.dart  connection_builder_demo.dart  connection_string_builder_demo.dart  dbms_info_demo.dart  driver_features_demo.dart  execute_async_demo.dart  low_level_wrappers_demo.dart  main.dart  (+19 more)
native/: Cargo.toml
native/doc/: README.md  async_api_design.md  async_api_guide.md  baseline_metrics.md  bcp_dll_compatibility.md  bulk_operations_benchmark.md  cross_database.md  data_paths.md  ffi_api.md  ffi_conventions.md  getting_started_with_implementation.md  implementation_plan.md  odbc_engine_overview.md  performance_comparison.md  plan_checklist_template.md  statement_reuse_and_timeout.md  test_matrix.md
native/doc/notes/: action_plan.md  bcp_research.md  bcp_resolution_summary.md  remaining_implementation.md  roadmap.md  statement_reuse_and_timeout.md  unexposed_features.md
native/odbc_engine/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  cbindgen.toml  odbc_exports.def
native/odbc_engine/.cargo/: config.toml
native/odbc_engine/benches/: bulk_operations_bench.rs  columnar_v1_v2_encode.rs  columnar_v2_placeholder.rs  comparative_bench.rs  metadata_cache_bench.rs
native/odbc_engine/scripts/: analyze_coverage.ps1  run_coverage.ps1  run_coverage.py
native/odbc_engine/src/: lib.rs
native/odbc_engine/src/async_bridge/: mod.rs
native/odbc_engine/src/engine/: catalog.rs  cell_reader.rs  connection.rs  dbms_info.rs  environment.rs  identifier.rs  mod.rs  query.rs  sqlserver_json.rs  statement.rs  streaming.rs  transaction.rs  xa_dtc.rs  xa_oci.rs  xa_transaction.rs
native/odbc_engine/src/engine/core/: array_binding.rs  batch_executor.rs  bulk_copy.rs  connection_manager.rs  disk_spill.rs  driver_capabilities.rs  execution_engine.rs  memory_engine.rs  metadata_cache.rs  mod.rs  output_aware_params.rs  parallel_insert.rs  pipeline.rs  prepared_cache.rs  protocol_engine.rs  ref_cursor_oracle.rs  security_layer.rs  sqlserver_bcp.rs
native/odbc_engine/src/error/: mod.rs
native/odbc_engine/src/ffi/: columnar_decompress.rs  guard.rs  mod.rs
native/odbc_engine/src/handles/: cached_connection.rs  mod.rs
native/odbc_engine/src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
native/odbc_engine/src/observability/telemetry/: console.rs  exporters.rs  mod.rs
native/odbc_engine/src/plugins/: db2.rs  driver_plugin.rs  mariadb.rs  mod.rs  mysql.rs  oracle.rs  postgres.rs  registry.rs  snowflake.rs  sqlite.rs  sqlserver.rs  sybase.rs
native/odbc_engine/src/plugins/capabilities/: bulk_loader.rs  catalog_provider.rs  mod.rs  quoter.rs  returning.rs  session_init.rs  type_catalog.rs  upsert.rs
native/odbc_engine/src/pool/: mod.rs
native/odbc_engine/src/protocol/: arena.rs  bound_param.rs  bulk_insert.rs  columnar.rs  columnar_encoder.rs  columnar_v2.rs  compression.rs  converter.rs  decoder.rs  encoder.rs  mod.rs  multi_result.rs  param_value.rs  row_buffer.rs  types.rs
native/odbc_engine/src/security/: audit.rs  mod.rs  sanitize.rs  secret_manager.rs  secure_buffer.rs
native/odbc_engine/src/telemetry/: console.rs  exporters.rs  lib.rs  mod.rs
native/odbc_engine/src/versioning/: abi_version.rs  api_version.rs  mod.rs  protocol_version.rs
native/odbc_engine/tests/: README.md  abi_test.rs  cell_reader_test.rs  columnar_v2_zstd_golden_file.rs  concurrent_access_test.rs  concurrent_error_test.rs  e2e_async_api_test.rs  e2e_basic_connection_test.rs  e2e_batch_executor_test.rs  e2e_bcp_fallback_test.rs  e2e_bcp_native_numeric_test.rs  e2e_bulk_compare_benchmark_test.rs  e2e_bulk_operations_test.rs  e2e_bulk_transaction_stress_test.rs  e2e_catalog_test.rs  e2e_driver_capabilities_test.rs  e2e_execution_engine_test.rs  e2e_multi_db_basic_test.rs  e2e_oracle_ref_cursor_test.rs  e2e_pool_test.rs  e2e_savepoint_test.rs  e2e_sqlserver_test.rs  e2e_statement_reuse_test.rs  e2e_streaming_test.rs  e2e_structured_error_test.rs  e2e_test.rs  e2e_timeout_test.rs  e2e_transaction_access_mode_test.rs  e2e_transaction_lock_timeout_test.rs  e2e_xa_transaction_test.rs  ffi_compatibility_test.rs  integration_test.rs  phase11_test.rs  phase12_test.rs  phase13_test.rs  phase14_test.rs  regression_test.rs  structured_error_regression_test.rs  transaction_test.rs
native/odbc_engine/tests/helpers/: e2e.rs  env.rs  mod.rs
native/odbc_engine/tests/regression/: a1_ffi_savepoint_injection.rs  a1_savepoint_injection.rs  a2_array_binding_injection.rs  a3_span_lifecycle.rs  c10_integer_binary_decode.rs  c1_ffi_panic_safety.rs  c2_telemetry_ffi_safety.rs  c6_multi_result_loop.rs  c9_bitmap_truncation.rs  d1_drt1_multi_result_wire.rs  m1_multi_result_batch_shapes.rs  m8_streaming_multi_result.rs  mod.rs  v21_dbms_detection.rs  v30_capabilities.rs  v30_returning_dialects.rs  v30_session_init.rs  v30_upsert_dialects.rs  xa_dtc_test.rs
native/telemetry/src/: lib.rs
(+281 files in other folders)
