[package]
name = "odbc_engine"
# v3.0.0 release: 7 capability traits (BulkLoader, Upsertable, Returnable,
# TypeCatalog, IdentifierQuoter, CatalogProvider, SessionInitializer); 4 new
# plugins (SQLite, IBM Db2, Snowflake, MariaDB) on top of the existing 5; 12
# new OdbcType variants; 3 new FFI entry points. See CHANGELOG.md for the
# complete list and migration notes.
version = "3.0.0"
edition = "2021"
authors = ["ODBC Fast Team"]
description = "Enterprise-grade ODBC data platform engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/odbc-fast/dart_odbc_fast"
build = "build.rs"
keywords = ["odbc", "database", "sql", "ffi", "dart"]
categories = ["database", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["test-helpers", "observability"]
sqlserver-bcp = []
# Reuse ODBC prepared statement handles per connection (LRU cache).
# Default off; enables ~10%+ improvement in repetitive prepare/execute workloads.
statement-handle-reuse = []
# Full observability: OTLP exporter, metrics, tracing. Disable for minimal builds.
observability = ["dep:ureq"]
# Load .env in lib and integration tests (needs dotenvy).
test-helpers = ["dep:dotenvy"]
# Enables FFI tests (concurrent_error_test, e2e_savepoint_test FFI parts).
# FFI symbols may not be visible in all build configs.
ffi-tests = []

[dependencies]
odbc-api = { version = "20.1.1", default-features = false, features = ["odbc_version_3_5"] }
r2d2 = "0.8"
rayon = "1.8"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
thiserror = "2.0"
log = "0.4"
lru = "0.12"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
lazy_static = "1.5"
zstd = "0.13"
lz4 = "1.24"
ureq = { version = "2.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = { version = "0.15", optional = true }

[target.'cfg(windows)'.dependencies]
libloading = "0.8"

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"

[[test]]
name = "ffi_compatibility_test"
path = "tests/ffi_compatibility_test.rs"
required-features = ["ffi-tests"]

[[bench]]
name = "bulk_operations_bench"
harness = false

[[bench]]
name = "metadata_cache_bench"
harness = false

[[bench]]
name = "comparative_bench"
harness = false

[build-dependencies]
cbindgen = "0.29.2"
