[package]
name = "odbc_engine"
# v3.1.0 release: transaction control hardening.
# - SavepointDialect::Auto resolved via SQLGetInfo at Transaction::begin (B2).
# - FFI odbc_savepoint_* now route through Transaction::savepoint_* with
#   identifier validation + dialect-aware quoting (B1 / closes A1 via FFI).
# - apply_isolation engine-aware (SQLite PRAGMA, Db2 SET CURRENT, Oracle
#   restricted, Snowflake skip, Sql92 default).
# - commit / rollback always restore autocommit (B7).
# - 6 new regression tests under tests/regression/a1_ffi_savepoint_injection.
# See CHANGELOG.md for the complete list and migration notes.
version = "3.3.0"
edition = "2021"
authors = ["ODBC Fast Team"]
description = "Enterprise-grade ODBC data platform engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/odbc-fast/dart_odbc_fast"
build = "build.rs"
keywords = ["odbc", "database", "sql", "ffi", "dart"]
categories = ["database", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["test-helpers", "observability"]
sqlserver-bcp = []
# Reuse ODBC prepared statement handles per connection (LRU cache).
# Default off; enables ~10%+ improvement in repetitive prepare/execute workloads.
statement-handle-reuse = []
# Full observability: OTLP exporter, metrics, tracing. Disable for minimal builds.
observability = ["dep:ureq"]
# Load .env in lib and integration tests (needs dotenvy).
test-helpers = ["dep:dotenvy"]
# Enables FFI tests (concurrent_error_test, e2e_savepoint_test FFI parts).
# FFI symbols may not be visible in all build configs.
ffi-tests = []
# Sprint 4.3b — XA / 2PC on SQL Server via MSDTC (Windows-only).
# Pulls `windows-sys` and links into the OLE32/MSDTC COM API. The
# feature is a no-op on non-Windows targets (the underlying engine
# matrix returns `UnsupportedFeature` there). Code outside the
# `xa-dtc` feature gate continues to behave exactly as before.
xa-dtc = ["dep:windows"]
# Sprint 4.3c — XA / 2PC on Oracle via the OCI XA library
# (`libclntsh.so` / `oci.dll`, header `oraxa.h`). The Oracle Instant
# Client must be present at runtime; the FFI is loaded dynamically
# via `libloading` so the engine can be shipped without an Oracle
# build dependency. Code outside the `xa-oci` feature gate continues
# to behave exactly as before.
xa-oci = ["dep:libloading"]

[dependencies]
odbc-api = { version = "20.1.1", default-features = false, features = ["odbc_version_3_5"] }
r2d2 = "0.8"
rayon = "1.8"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
thiserror = "2.0"
log = "0.4"
lru = "0.12"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
lazy_static = "1.5"
zstd = "0.13"
lz4 = "1.24"
ureq = { version = "2.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = { version = "0.15", optional = true }
# Sprint 4.3c — Oracle OCI XA dynamic-loading shim. Cross-platform
# because Oracle Instant Client ships on Windows + Linux + macOS;
# we resolve the right shared library at runtime so the same Cargo
# feature works everywhere.
libloading = { version = "0.8", optional = true }

[target.'cfg(windows)'.dependencies]
# Sprint 4.3b — MSDTC COM enlistment.
#
# We use the `windows` crate (NOT `windows-sys`) because MSDTC is a
# COM API and we need auto-generated `IUnknown` / `ITransaction` /
# `ITransactionDispenser` interface bindings. `windows-sys` only
# ships raw FFI declarations and would require us to hand-roll the
# vtables — error-prone and not worth the binary-size saving for an
# opt-in feature.
#
# The feature gate `xa-dtc` controls whether the bindings are
# linked; without the feature this dep is not pulled and the binary
# is byte-identical to today.
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_DistributedTransactionCoordinator",
    "Win32_System_Variant",
], optional = true }

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"

[[test]]
name = "ffi_compatibility_test"
path = "tests/ffi_compatibility_test.rs"
required-features = ["ffi-tests"]

[[bench]]
name = "bulk_operations_bench"
harness = false

[[bench]]
name = "metadata_cache_bench"
harness = false

[[bench]]
name = "comparative_bench"
harness = false

[build-dependencies]
cbindgen = "0.29.2"
